--- a/packages/raystack/textfield/textfield.module.css
+++ b/packages/raystack/textfield/textfield.module.css
@@ -6,13 +6,15 @@
   padding: 0;
   height: auto;
   width: 100%;
-
   background-color: var(--background-base);
-  border: 0.5px solid var(--border-base);
+  outline: 0.5px solid var(--border-base);
+  border: none;
   box-shadow: var(--shadow-xs);
   border-radius: var(--br-4);
   color: var(--foreground-base);
   padding: var(--pd-4);
+  letter-spacing: 0.4px;
+  line-height: 16px;
 }
 
 .textfield:-webkit-autofill {
@@ -20,13 +22,12 @@
 }
 
 .textfield:focus {
-  border: 1px solid var(--background-accent-inverted);
+  outline: 1px solid var(--background-accent-inverted);
 }
 
 .textfield::placeholder {
   color: var(--foreground-subtle);
   font-size: 12px;
-  line-height: 16px;
 }
 
 .textfield:disabled {
@@ -42,30 +43,28 @@
 .textfield-sm {
   border-radius: var(--br-4);
   font-size: 12px;
-  line-height: 16px;
-  padding: var(--pd-4);
+  padding: var(--pd-4) var(--pd-8);
 }
 
 .textfield-md {
   border-radius: var(--br-4);
-  font-size: 13px;
-  line-height: 16px;
+  font-size: 12px;
   padding: var(--pd-8);
 }
 
 .textfield-invlid {
-  border: 1px solid var(--border-danger);
+  outline: 1px solid var(--border-danger);
 }
 .textfield-invlid:focus {
-  border: 1px solid var(--border-danger);
+  outline: 1px solid var(--border-danger);
 }
 
 .textfield-valid {
-  border: 1px solid var(--border-success);
+  outline: 1px solid var(--border-success);
 }
 
 .textfield-valid:focus {
-  border: 1px solid var(--border-success);
+  outline: 1px solid var(--border-success);
 }
 
 .textfield-leading {
